--- a/package.json
+++ b/package.json
@@ -17,17 +17,16 @@
     "@babel/preset-typescript": "^7.13.0",
     "@svgr/webpack": "^5.5.0",
     "babel-loader": "^8.2.2",
+    "bundle-stats-webpack-plugin": "^2.7.2",
     "cross-env": "^7.0.3",
     "del": "^6.0.0",
     "file-loader": "^6.2.0",
     "gulp": "^4.0.2",
-    "gulp-sass": "^4.1.0",
-    "sass": "^1.32.8",
+    "gulp-dart-sass": "^1.0.2",
+    "gulp-nunjucks": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
     "webpack": "^5.24.4",
     "webpack-merge": "^5.7.3",
     "webpack-stream": "^6.1.2"
-  },
-  "dependencies": {
-
   }
 }
