--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-typescript": "^7.13.0",
     "@svgr/webpack": "^5.5.0",
     "babel-loader": "^8.2.2",
+    "browser-sync": "^2.26.14",
     "bundle-stats-webpack-plugin": "^2.7.2",
     "cross-env": "^7.0.3",
     "del": "^6.0.0",
@@ -24,8 +25,10 @@
     "gulp": "^4.0.2",
     "gulp-dart-sass": "^1.0.2",
     "gulp-nunjucks": "^5.1.0",
+    "gulp-prettier": "^3.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "webpack": "^5.24.4",
+    "webpack-manifest-plugin": "^3.1.0",
     "webpack-merge": "^5.7.3",
     "webpack-stream": "^6.1.2"
   }
