--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
     "@svgr/webpack": "^5.5.0",
+    "@types/webpack-env": "^1.16.0",
     "babel-loader": "^8.2.2",
     "browser-sync": "^2.26.14",
     "bundle-stats-webpack-plugin": "^2.7.2",
@@ -28,6 +29,8 @@
     "gulp-prettier": "^3.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "webpack": "^5.24.4",
+    "webpack-dev-middleware": "^4.1.0",
+    "webpack-hot-middleware": "^2.25.0",
     "webpack-manifest-plugin": "^3.1.0",
     "webpack-merge": "^5.7.3",
     "webpack-stream": "^6.1.2"
