--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "webpack-manifest-plugin": "^3.1.0",
     "webpack-merge": "^5.7.3",
     "webpack-stream": "^6.1.2"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1"
   }
 }
