--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "file-loader": "^6.2.0",
     "gulp": "^4.0.2",
     "gulp-dart-sass": "^1.0.2",
-    "gulp-nunjucks": "^5.1.0",
+    "gulp-ejs": "^5.1.0",
     "gulp-prettier": "^3.0.0",
+    "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "webpack": "^5.24.4",
     "webpack-dev-middleware": "^4.1.0",
